--- a/package.json
+++ b/package.json
@@ -1,6 +1,27 @@
 {
   "name": "@bigoncloud/common",
   "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT"
+  "main": "./build/index.js",
+  "types": "./build/index.d.ts",
+  "files": [
+    "build/**/*"
+  ],
+  "license": "MIT",
+  "scripts": {
+    "clean": "del ./build/*",
+    "build": "npm run clean && tsc",
+    "publish": "git add . && git commit -m \"Updates\" && npm version patch && npm run build && npm publish"
+  },
+  "dependencies": {
+    "@types/cookie-session": "^2.0.41",
+    "@types/express": "^4.17.6",
+    "@types/jsonwebtoken": "^8.5.0",
+    "cookie-session": "^1.4.0",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1"
+  },
+  "devDependencies": {
+    "del-cli": "^3.0.1",
+    "typescript": "^3.9.6"
+  }
 }
