--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@bigoncloud/common",
-  "version": "1.0.1",
+  "name": "@bigoncloud/mware",
+  "version": "1.0.0",
   "main": "./build/index.js",
   "types": "./build/index.d.ts",
   "files": [
