--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bigoncloud/mware",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "main": "./build/index.js",
   "types": "./build/index.d.ts",
   "files": [
@@ -29,7 +29,12 @@
     "@types/cors": "^2.8.6",
     "@types/helmet": "0.0.47",
     "@types/morgan": "^1.9.1",
+    "@typescript-eslint/eslint-plugin": "^3.6.0",
+    "@typescript-eslint/parser": "^3.6.0",
     "del-cli": "^3.0.1",
+    "eslint": "^7.4.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-plugin-import": "^2.22.0",
     "typescript": "^3.9.6"
   }
 }
