--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,31 +1,31 @@
 {
-  "env": {
-      "es2020": true,
-      "node": true
-  },
-  "extends": [
-      "airbnb-base"
-  ],
-  "parser": "@typescript-eslint/parser",
-  "parserOptions": {
-      "ecmaVersion": 11,
-      "sourceType": "module"
-  },
-  "plugins": [
-      "@typescript-eslint"
-  ],
-  "settings": {
-      "import/resolver": {
-        "node": {
-          "extensions": [".js", ".jsx", ".ts", ".tsx"]
-        }
-      }
+    "env": {
+        "es2020": true,
+        "node": true
     },
-  "rules": {
-      "object-curly-newline": "off",
-      "import/prefer-default-export": "off",
-      "import/extensions": "off",
-      "eol-last": "off",
-      "semi": "off"
-  }
+    "extends": [
+        "airbnb-base"
+    ],
+    "parser": "@typescript-eslint/parser",
+    "parserOptions": {
+        "ecmaVersion": 11,
+        "sourceType": "module"
+    },
+    "plugins": [
+        "@typescript-eslint"
+    ],
+    "settings": {
+        "import/resolver": {
+          "node": {
+            "extensions": [".js", ".jsx", ".ts", ".tsx"]
+          }
+        }
+      },
+    "rules": {
+        "semi":"off",
+        "import/prefer-default-export": "off",
+        "import/extensions": "off",
+        "no-unused-vars":"off"
+        
+    }
 }
