--- a/package.json
+++ b/package.json
@@ -13,22 +13,18 @@
     "pub": "git add . && git commit -m \"Updates\" && npm run build && npm version patch && npm publish --access public"
   },
   "dependencies": {
-    "@types/cookie-session": "^2.0.41",
-    "@types/express": "^4.17.6",
-    "@types/jsonwebtoken": "^8.5.0",
     "compression": "^1.7.4",
     "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-validator": "^6.6.0",
     "helmet": "^3.23.3",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
-    "@types/compression": "^1.7.0",
-    "@types/cors": "^2.8.6",
-    "@types/helmet": "0.0.47",
-    "@types/morgan": "^1.9.1",
+    "@types/express": "^4.17.7",
+    "@types/jsonwebtoken": "^8.5.0",
     "@typescript-eslint/eslint-plugin": "^3.6.0",
     "@typescript-eslint/parser": "^3.6.0",
     "del-cli": "^3.0.1",
