--- a/package.json
+++ b/package.json
@@ -23,8 +23,13 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "@types/compression": "^1.7.0",
+    "@types/cookie-session": "^2.0.41",
+    "@types/cors": "^2.8.6",
     "@types/express": "^4.17.7",
+    "@types/helmet": "0.0.47",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/morgan": "^1.9.1",
     "@typescript-eslint/eslint-plugin": "^3.6.0",
     "@typescript-eslint/parser": "^3.6.0",
     "del-cli": "^3.0.1",
